--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -144,6 +144,7 @@ const hreflangLangs = isMusingsPage
   </head>
   <body
     class="flex flex-col bg-stone-50 text-stone-800 antialiased min-h-dvh dark:bg-stone-950 selection:bg-stone-900/10 dark:text-stone-200 dark:selection:bg-stone-100/10"
+    style="text-autospace:normal"
   >
     <nav
       class="fade-in w-full flex items-center justify-between gap-4 px-4 py-5 md:px-12 sm:px-6"
