fix: add missing prettier-plugin-astro

--- a/src/components/pages/Home.astro
+++ b/src/components/pages/Home.astro
@@ -115,6 +115,7 @@ const schema = {
     </div>
   </main>
   <script>
-    import '../../scripts/typewriter'
+    import { runTypewriter } from '../../scripts/typewriter'
+    document.addEventListener('astro:page-load', runTypewriter)
   </script>
 </Layout>
