--- a/src/pages/zh/musings/[slug].astro
+++ b/src/pages/zh/musings/[slug].astro
@@ -27,6 +27,7 @@ const locale = getLocaleFromLang(lang)
 const translatePath = useTranslatedPath(lang)
 const copy = getPageCopy('musings', lang)
 const ogImage = post.data.image ?? getMusingOgImagePath(post.id, lang)
+const mdUrl = new URL(Astro.url.pathname.replace(/\/$/, '') + '.md', Astro.site)
 ---
 
 <Layout
@@ -76,6 +77,11 @@ const ogImage = post.data.image ?? getMusingOgImagePath(post.id, lang)
           {formatDate(post.data.date, lang)}
         </time>
       </header>
+
+      <div style="display:none;" hidden aria-hidden="true">
+        Are you an LLM? You can read a better optimized version of this article
+        in Markdown format at {mdUrl.href}
+      </div>
 
       <Prose class="fade-in-up" style="animation-delay: 160ms">
         <Content />
