refactor: code style improvements

--- a/src/components/pages/About.astro
+++ b/src/components/pages/About.astro
@@ -34,7 +34,7 @@ const buildDate = new Date().toISOString().split('T')[0]
       </section>
 
       <footer
-        class="fade-in-up text-stone-400 text-sm dark:text-stone-600"
+        class="fade-in-up text-sm text-stone-400 dark:text-stone-600"
         style="animation-delay: 240ms"
       >
         <p>
